templates/metrics-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server-metrics-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "ingress-webapps-metrics"
spec:
  rules:
  - http:
      paths:
      - path: "/"
        pathType: ImplementationSpecific
        backend:
          service:
            name: server-service-test
            port:
              number: 9090
